# AI_apply

./: .gitignore  00_capability_lifecycle.md  01_tracking.md  05_harness.md  09_learning_absorption.md  Agent应用经验.md  Agent应用经验_整理版.md  INDEX.md  README.md  cdn_agent_design.md  harness_engineering_guide_精简版.md  install.sh  link-skills.sh  prd.json  progress.txt  self-merge.sh  worker-prompt.txt
docs/: auto-review-design.md  bilibili-workflow.md  business-data-agent-design.md  hook-testing-report.md  information-tracking-design.md  omc-skills-evaluation.md  self-evolution-design.md  skill-evaluation.md  skills-verification-report.md
docs/skills/: bilibili-api.md  bilibili-subtitle.md  rss-subscription.md  wechat-content.md  youtube-subtitle.md
evaluation/: README.md
evaluation/reports/: intel_report.json  log-analyzer_report.json  review-trigger_report.json  test-case-generator_report.json
evaluation/scripts/: skill_evaluate.py
evaluation/test_cases/: intel_tests.json  log-analyzer_tests.json  review-trigger_tests.json  test-case-generator_tests.json
hermes-cdn-agent/: README.md  main.py  pyproject.toml
hermes-cdn-agent/config/: settings.yaml
hermes-cdn-agent/hooks/: param_fallback.py
hermes-cdn-agent/tests/: test_param_fallback.py  test_schema_infer.py
hermes-cdn-agent/tools/: browser_helper.py  cdn_tools.py  schema_infer.py
hooks/: review-trigger.py
skills/bilibili-analyzer/: SKILL.md
tests/: hook-test-report.json  test_review_trigger.py
use_raw/: ECC_use.md  INDEX.md  ai_meta.md  claude_init.md  claude_use.md  cursor.md
(+9 files in other folders)
